--- a/example.env
+++ b/example.env
@@ -1,2 +1,7 @@
 DEBUG="false"
-GOOGLE_API_KEY= # get it from https://aistudio.google.com/apikey
+GOOGLE_API_KEY="" # get it from https://aistudio.google.com/apikey
+TELEGRAM_CHAT_ID="" # you can get this from your telegram chart url
+TELEGRAM_SERVER_KEY="" # you can get this from smithery
+TELEGRAM_PROFILE_ID=""  # you can get this from smithery
+TELEGRAM_BOT_TOKEN="" # you can get this from botfather on telegram
+WALLET_PRIVATE_KEY="" # funder wallet private key - should hold FRAX on fraxtal
