--- a/package.json
+++ b/package.json
@@ -16,21 +16,13 @@
 		"precommit": "lint-staged"
 	},
 	"lint-staged": {
-		"*.{ts,js,json}": [
-			"biome check --write"
-		]
+		"*.{ts,js,json}": ["biome check --write"]
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/IQAICOM/adk-agent-starter.git"
 	},
-	"keywords": [
-		"ai",
-		"agent",
-		"mcp",
-		"adk-ts",
-		"IQAI"
-	],
+	"keywords": ["ai", "agent", "mcp", "adk-ts", "IQAI"],
 	"author": "IQAI",
 	"license": "MIT",
 	"bugs": {
