--- a/package.json
+++ b/package.json
@@ -39,11 +39,16 @@
 		"zod": "^3.25.51"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.27.2",
+		"@babel/preset-typescript": "^7.27.1",
 		"@biomejs/biome": "^1.9.4",
+		"@types/jest": "^30.0.0",
 		"@types/node": "^24.0.4",
 		"husky": "^9.0.0",
+		"jest": "^30.0.3",
 		"lint-staged": "^16.1.0",
 		"rimraf": "^6.0.1",
+		"ts-jest": "^29.4.0",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.2"
 	}
