--- a/package.json
+++ b/package.json
@@ -30,8 +30,13 @@
 		"url": "https://github.com/IQAICOM/adk-agent-starter/issues"
 	},
 	"homepage": "https://github.com/IQAICOM/adk-agent-starter#readme",
+	"pnpm": {
+		"overrides": {
+			"chalk": "^4.1.2"
+		}
+	},
 	"dependencies": {
-		"@iqai/adk": "^0.1.20",
+		"@iqai/adk": "^0.1.21",
 		"@openrouter/ai-sdk-provider": "^0.7.3",
 		"dedent": "^1.6.0",
 		"dotenv": "^16.4.5",
