--- a/example.env
+++ b/example.env
@@ -3,3 +3,4 @@ GOOGLE_API_KEY="" # get it from https://aistudio.google.com/apikey
 TELEGRAM_CHAT_ID="" # you can get this from your telegram chart url
 TELEGRAM_BOT_TOKEN="" # you can get this from botfather on telegram
 WALLET_PRIVATE_KEY="" # funder wallet private key - should hold FRAX on fraxtal
+ALCHEMY_API_KEY="" # Alchemy mainnet RPC key
